# plato-portal

./: .gitignore  360-BIT-GEOMETRIC-LATTICE.md  90-EXPERIMENTS-SYNTHESIS.md  ABSOLUTE-RELATIVITY.md  ADE-VERIFICATION.md  AGENT-ON-METAL-ARCHITECTURE.md  AGENT-QUEUE.md  AGENT.md  AGENTS.md  APERIODIC-WAVE-PROCESS.md  APPLIED-DODECET-SNAPWORKS.md  ARCHITECTURE.md  ARCHITECTURE_GAPS.md  BETA-CULTURAL-REPORT.md  BETA-MATH-REPORT.md  BETA-ONBOARDING-REPORT.md  BETA-PRODUCER-REPORT.md  BETA-R2-CULTURAL-RETEST.md  BETA-R2-FUGUE-RETEST.md  BETA-R2-MORPHER-FIX.md  BETA-R2-PRODUCER-SOUND.md  BETA-R2-SUBSTRATE-RIGOR.md  BETA-R3-FULL-INTEGRATION.md  BETA-TASK-FUGUE.md  BETA-TASK-STYLE.md  BETA1-ATTRACTOR-SHELLS.md  BETWEEN-THE-WORDS.md  BMA-ACROSS-ALL-SCALES.md  BMA-DEADBAND-THRESHOLD.md  BUSINESS-OVERVIEW.md  CATALOG.md  CHANGELOG.md  CHARTER.md  CHIRALITY-FROM-CONSTRAINTS.md  CHROME-PLATO-KILLER-APP.md  CI_FIX_STRATEGY.md  CLAUDE-CODE-LESSONS.md  CLAUDE-CRITIQUE-AND-EXTENSIONS.md  CLAUDE-DEEP-QUESTION.md  COMONAD-RG-FLOW-UNIFICATION.md  (+553 more)
.github/: pull_request_template.md
.openclaw/: workspace-state.json
.well-known/: security.txt
INDEXES/: CONCEPTS.md  LANGUAGE.md  REALM.md  TOPIC.md  TYPE.md
RESEARCH/: RETRO-SUNSET-PLATO.md
a2a-conservation/: agent_directory.py  conservation_agent.py  demonstration.py  protocol.py  visualize.py
agent-reviews/: zero-shot-review-summary.md
agents/: FLEET-AGENTS.md  README.md
analog-spline-theory/: ADVERSARIAL-SYNTHESIS.md  FINAL-5-MODEL-SYNTHESIS.md  README.md  SPLINE-PHYSICS-SYNERGY.md  SYNTHESIS.md  deepseek-formal-proofs.md  flash-debate.md  flux_galois_coq.v  galois-unification-visualizer.py  nemotron-debate.md  seed-debate.md  (+2 more)
constraint-toolkit/: README.md  pyproject.toml
constraint-toolkit/constraint_toolkit/: __init__.py  dial.py  export.py  lattice.py  tradition.py  visualization.py
constraint-toolkit/tests/: test_dial.py  test_export.py  test_lattice.py  test_tradition.py  test_visualization.py
(+602 files in other folders)
